# hch

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/hch/: change.py  config.py  course.py  error.py  grade.py  hunt.py  login.py  main.py  select.py  spinning.py  time_info.py  tools.py
src/hch/list/: __init__.py  config.py  hunted.py  selected.py
src/hch/set/: __init__.py  cookies.py  max_retries.py  password.py  target_time.py  username.py  wait_time.py
